--- a/详细产品页.html
+++ b/详细产品页.html
@@ -69,7 +69,7 @@
 							<dd><a href="#">荣耀X3</a> <a href="#">单反</a> <a href="#">智能装备</a></dd>
 						</dl>
 					</div>
-					<div class="shopClass_list hide">
+					<div class="shopClass_list ">
 						<div class="shopClass_list_padding">
 							<dl class="shopList_item">
 								<dt><a href="#">水电费价</a> </dt>
@@ -90,7 +90,7 @@
 						</div>
 						<div class="shopClass_list_padding">
 							<dl class="shopList_item">
-								<dt><a href="#">水电费价</a> </dt>
+								<dt><a href="#">水电费价</a></dt>
 								<dd><a href="#">文字啊</a><a href="#">文字啊</a><a href="#">文字啊</a><a href="#">文字啊</a><a href="#">文字啊</a><a href="#">文字啊</a><a href="#">文字啊</a></dd>
 							</dl>
 						</div>
